# rainbow-os

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  handoff.md  review-445a40.md
apps/asteroids/: asteroids.c
apps/basic/: main.c  program.c  program.h  token.h  value.h  vars.c  vars.h
apps/editor/: main.c  view.c
apps/invaders/: invaders.c
apps/lib/: crt0.asm  oscompat.c  syscall.asm  syscall.h  types.h  umem.c  user.ld
apps/lib/drivers/: keyboard.h  serial.h  vga.h
apps/lib/fs/: diskfs.h  fat12.h
apps/lib/include/: types.h
apps/lib/lib/: string.h
boot/: boot.asm  stage2.asm
cmake/: i686-elf-toolchain.cmake
docs/: bugfix-gfx-return.md  debugger.md  persistence-plan.md  ring3-plan.md  syscall-validation-plan.md
kernel/: entry.asm  gdt.c  gdt.h  idt.c  isr_stubs.asm  kernel.c  linker.ld  paging.c  pic.c  pmm.c  usermode.asm
kernel/basic/: basic.c  basic.h  exec.c  exec.h  expr.c  expr.h  tokenizer.c  tokenizer.h
kernel/cc/: cc.c  cc.h  codegen.c  codegen.h  lexer.c  lexer.h  parser.c  parser.h  preproc.c  preproc.h  runtime.c  runtime.h  sym.c  sym.h  token.h
kernel/debug/: debugger.c  debugger.h  disasm.c  disasm.h
kernel/drivers/: ata.c  ata.h  keyboard.c  keyboard.h  serial.c  serial.h  svga.c  svga.h  timer.c  timer.h  vga.c  vga.h
kernel/editor/: buffer.c  buffer.h  editor.c  view.c  view.h
kernel/fs/: diskfs.c  diskfs.h  fat12.c  fat12.h  ramdisk.c  ramdisk.h
kernel/game/: asteroids.c  asteroids.h  space_invaders.c  space_invaders.h
kernel/include/: idt.h  io.h  paging.h  pic.h  pmm.h  types.h
kernel/lib/: string.c  string.h
kernel/shell/: shell.c  shell.h
rootfs/: badsys.c  colors.txt  crt0.h  dbgtest.c  evil.c  hello.txt  printf.c  readme.txt
scripts/: build-userapp.sh  check-kernel-size.sh  debug.sh  mkfs-fat12.sh  mkimage-hdd.sh  mkimage.sh  run-hdd.sh  run.sh
